--- a/src/pages/tech-settings/tech-settings.scss
+++ b/src/pages/tech-settings/tech-settings.scss
@@ -17,30 +17,20 @@ page-tech-settings {
     padding-top: 8px;
     padding-bottom: 8px;
   }
-  // .tech-settings-form > ion-list > ion-item > div.item-inner > div > ion-select,
-  // .tech-settings-form ion-select.select.user-settings-select {
-  //   flex: 0 0 100%;
-  //   width: calc(100% - 150px);
-  //   min-width: calc(100% - 200px);
-  //   // max-width: 80vw;
-  //   min-height: 35px;
-  //   align-self: center;
-  //   padding-left: 8px;
-  //   padding-top: 8px;
-  //   padding-bottom: 8px;
-  // }
   form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-icon,
   .tech-settings-form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-icon,
   {
     width: 20px !important;
   }
   form > ion-list > ion-item,
-  .tech-settings-form > ion-list > ion-item {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+  .tech-settings-form {
+    ion-item {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
   }
   form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-text,
   .tech-settings-form > ion-list > ion-item > div.item-inner > div > ion-select > div.select-text {
@@ -57,8 +47,6 @@ page-tech-settings {
     color: #488aff;
     min-height: 35px;
     padding: 0;
-  }
-  ion-input {
   }
   form ion-label.manual-float-label,
   .tech-settings-form ion-label.manual-float-label{
