--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -164,25 +164,33 @@ ion-content {
 
 
 .loading-md .loading-wrapper {
-  border-radius:64px !important;
+  // border-radius:64px !important;
+  border-radius:16px !important;
 }
 
 .loading-wrapper {
-  background: rgba(250, 250, 250, 0.25) !important;
-  box-shadow: rgba(50, 50, 50, 0.25) !important;
+  background: rgba(250, 250, 250, 0.5) !important;
+  box-shadow: rgba(50, 50, 50, 0.5) !important;
   flex-direction: column !important;
-  zoom: 1.5;
+  // zoom: 1.5;
 }
 
 .loading-spinner {
-  zoom: 2;
+  // zoom: 2;
+  ion-spinner {
+    zoom: 3;
+  }
 }
 
 .loading-content {
   color: black;
+  background: rgba(250, 250, 250, 1.0) !important;
   font-size: 32px !important;
   font-weight: bold;
   text-align: center;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 @keyframes colorStroke {
