--- a/src/assets/fonts/onsitex_fonts.scss
+++ b/src/assets/fonts/onsitex_fonts.scss
@@ -227,11 +227,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../assets/fonts/icomoon.eot?fptsbz');
-  src:  url('../assets/fonts/icomoon.eot?fptsbz#iefix') format('embedded-opentype'),
-    url('../assets/fonts/icomoon.ttf?fptsbz') format('truetype'),
-    url('../assets/fonts/icomoon.woff?fptsbz') format('woff'),
-    url('../assets/fonts/icomoon.svg?fptsbz#icomoon') format('svg');
+  src:  url('../assets/fonts/icomoon.eot');
+  src:  url('../assets/fonts/icomoon.eot') format('embedded-opentype'),
+    url('../assets/fonts/icomoon.ttf') format('truetype'),
+    url('../assets/fonts/icomoon.woff') format('woff'),
+    url('../assets/fonts/icomoon.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -784,6 +784,9 @@
 }
 .icomoon-trash-outline:before {
   content: "\e988";
+}
+.icomoon-document-add:before {
+  content: "\e96e";
 }
 .icomoon-developer-head:before {
   content: "\e98b";
