--- a/src/assets/fonts/roboto.scss
+++ b/src/assets/fonts/roboto.scss
@@ -2,7 +2,8 @@
 // Google
 // Apache License, version 2.0
 // http://www.apache.org/licenses/LICENSE-2.0.html
-$roboto-font-path: $font-path !default;
+// $roboto-font-path: $font-path !default;
+$roboto-font-path: "../assets/fonts";
 @font-face {
     font-family: "Roboto";
     font-style: normal;
@@ -43,25 +44,23 @@ $roboto-font-path: $font-path !default;
     url("#{$roboto-font-path}/roboto-bold.woff") format("woff");
 }
 
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 300;
+  src: local("RobotoCondensed-Light"),
+  local("RobotoCondensed-Light"),
+  url("#{$roboto-font-path}/RobotoCondensed-Light.ttf") format("truetype");
+}
 
-/**
-    RobotoMono-Bold.ttf
-    RobotoMono-BoldItalic.ttf
-    RobotoMono-Italic.ttf
-    RobotoMono-Light.ttf
-    RobotoMono-LightItalic.ttf
-    RobotoMono-Medium.ttf
-    RobotoMono-MediumItalic.ttf
-    RobotoMono-Regular.ttf
-    RobotoMono-Thin.ttf
-    RobotoMono-ThinItalic.ttf
-    @font-face {
-      font-family: "RobotoMono";
-      font-style: normal;
-      font-weight: 400;
-      src: local("RobotoMono"), local("RobotoMono"), url("#{$roboto-font-path}/RobotoMono.ttf") format("truetype");
-    }
- */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  src: local("RobotoCondensed-Regular"),
+  local("RobotoCondensed-Regular"),
+  url("#{$roboto-font-path}/RobotoCondensed-Regular.ttf") format("truetype");
+}
 
 @font-face {
     font-family: "RobotoMono";
