--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -216,8 +216,62 @@ page-home {
     }
   }
 
+  .home-letter-legend {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid rgba(230,230,230,1.0);
+    // padding: 2px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-around;
+    align-items: space-around;
+    .home-legend-button {
+      @include button-like-block;
+      min-width: 150px;
+      box-sizing: border-box;
+      flex: 0 1 auto;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+      align-content: center;
+      align-items: center;
+      margin-right: 10px;
+      margin-left: 10px;
+      margin-top: 2px;
+      margin-bottom: 2px;
+      border-bottom: 1px dotted lightgrey;
+      border-right: 1px dotted lightgrey;
+      border-left: 1px dotted lightgrey;
+      border-top: 1px dotted lightgrey;
+      .label {
+        flex: 0 1 auto;
+        font-weight: bold;
+        font-family: "RobotoMono";
+        // font-family: "Anonymous Pro";
+        border-right: 1px dotted lightgrey;
+        // min-width: 20px;
+        margin-right: 2px;
+        padding-right: 2px;
+        padding-left: 2px;
+        text-align: right;
+      }
+      .data {
+        flex: 0 1 auto;
+        font-family: "Roboto Condensed";
+        font-weight: normal;
+        margin: 0px 2px;
+        text-align: left;
+      }
+      &:last-of-type {
+        // margin-right: 0px;
+      }
+    }
+  }
+
   .home-grid-key {
-    width: 70%;
+    width: 90%;
     border: 1px solid rgba(230,230,230,1.0);
     padding: 0;
   }
