--- a/src/assets/fonts/onsitex_fonts.scss
+++ b/src/assets/fonts/onsitex_fonts.scss
@@ -250,6 +250,240 @@
 }
 /* IcoMoon custom OnSiteX font */
 
+.icomoon-employee-problem:before {
+  content: "\e9e5";
+}
+.icomoon-oil-derrick-problem:before {
+  content: "\e9e6";
+}
+.icomoon-oil-derrick:before {
+  content: "\e9e7";
+}
+.icomoon-analytics:before {
+  content: "\e9e3";
+}
+.icomoon-problems:before {
+  content: "\e9e4";
+}
+.icomoon-location-history-map-large:before {
+  content: "\e9e1";
+}
+.icomoon-gps:before {
+  content: "\e9e2";
+}
+.icomoon-location-history-pin:before {
+  content: "\e99c";
+}
+.icomoon-location-trail:before {
+  content: "\e99d";
+}
+.icomoon-location-history-map:before {
+  content: "\e99e";
+}
+.icomoon-geolocation-earth:before {
+  content: "\e99f";
+}
+.icomoon-geolocation:before {
+  content: "\e9a0";
+}
+.icomoon-messages:before {
+  content: "\e9a1";
+}
+.icomoon-message-edit-square:before {
+  content: "\e9a2";
+}
+.icomoon-message-edit:before {
+  content: "\e9a3";
+}
+.icomoon-fracking-detail:before {
+  content: "\e9a4";
+}
+.icomoon-fracking-well:before {
+  content: "\e9a5";
+}
+.icomoon-truck-diesel:before {
+  content: "\e9a6";
+}
+.icomoon-mechanic:before {
+  content: "\e9a7";
+}
+.icomoon-mechanic-overalls:before {
+  content: "\e9a8";
+}
+.icomoon-pencil:before {
+  content: "\e9a9";
+}
+.icomoon-pencil2:before {
+  content: "\e9aa";
+}
+.icomoon-files-empty:before {
+  content: "\e9ab";
+}
+.icomoon-file-text2:before {
+  content: "\e9ac";
+}
+.icomoon-copy:before {
+  content: "\e9ad";
+}
+.icomoon-paste:before {
+  content: "\e9ae";
+}
+.icomoon-location:before {
+  content: "\e9af";
+}
+.icomoon-location2:before {
+  content: "\e9b0";
+}
+.icomoon-compass:before {
+  content: "\e9b1";
+}
+.icomoon-compass2:before {
+  content: "\e9b2";
+}
+.icomoon-map:before {
+  content: "\e9b3";
+}
+.icomoon-map2:before {
+  content: "\e9b4";
+}
+.icomoon-history:before {
+  content: "\e9b5";
+}
+.icomoon-clock:before {
+  content: "\e9b6";
+}
+.icomoon-clock2:before {
+  content: "\e9b7";
+}
+.icomoon-alarm:before {
+  content: "\e9b8";
+}
+.icomoon-stopwatch:before {
+  content: "\e9b9";
+}
+.icomoon-bubble:before {
+  content: "\e9ba";
+}
+.icomoon-bubbles:before {
+  content: "\e9bb";
+}
+.icomoon-bubbles2:before {
+  content: "\e9bc";
+}
+.icomoon-bubble2:before {
+  content: "\e9bd";
+}
+.icomoon-bubbles3:before {
+  content: "\e9be";
+}
+.icomoon-bubbles4:before {
+  content: "\e9bf";
+}
+.icomoon-user:before {
+  content: "\e9c0";
+}
+.icomoon-users:before {
+  content: "\e9c1";
+}
+.icomoon-user-plus:before {
+  content: "\e9c2";
+}
+.icomoon-user-minus:before {
+  content: "\e9c3";
+}
+.icomoon-user-check:before {
+  content: "\e9c4";
+}
+.icomoon-user-tie:before {
+  content: "\e9c5";
+}
+.icomoon-hour-glass:before {
+  content: "\e9c6";
+}
+.icomoon-binoculars:before {
+  content: "\e9c7";
+}
+.icomoon-search:before {
+  content: "\e9c8";
+}
+.icomoon-zoom-in:before {
+  content: "\e9c9";
+}
+.icomoon-zoom-out:before {
+  content: "\e9ca";
+}
+.icomoon-key:before {
+  content: "\e9cb";
+}
+.icomoon-key2:before {
+  content: "\e9cc";
+}
+.icomoon-lock:before {
+  content: "\e9cd";
+}
+.icomoon-unlocked:before {
+  content: "\e9ce";
+}
+.icomoon-wrench:before {
+  content: "\e9cf";
+}
+.icomoon-equalizer:before {
+  content: "\e9d0";
+}
+.icomoon-equalizer2:before {
+  content: "\e9d1";
+}
+.icomoon-cog:before {
+  content: "\e9d2";
+}
+.icomoon-cogs:before {
+  content: "\e9d3";
+}
+.icomoon-hammer:before {
+  content: "\e9d4";
+}
+.icomoon-pie-chart:before {
+  content: "\e9d5";
+}
+.icomoon-stats-dots:before {
+  content: "\e9d6";
+}
+.icomoon-stats-bars:before {
+  content: "\e9d7";
+}
+.icomoon-stats-bars2:before {
+  content: "\e9d8";
+}
+.icomoon-truck:before {
+  content: "\e9d9";
+}
+.icomoon-target:before {
+  content: "\e9da";
+}
+.icomoon-eye:before {
+  content: "\e9db";
+}
+.icomoon-eye-plus:before {
+  content: "\e9dc";
+}
+.icomoon-eye-minus:before {
+  content: "\e9dd";
+}
+.icomoon-eye-blocked:before {
+  content: "\e9de";
+}
+.icomoon-enter:before {
+  content: "\ea13";
+}
+.icomoon-exit:before {
+  content: "\ea14";
+}
+.icomoon-filter:before {
+  content: "\ea5b";
+}
+.icomoon-frack-truck:before {
+  content: "\e9df";
+}
 .icomoon-circled-0:before {
   content: "\e96f";
 }
@@ -507,6 +741,9 @@
 .icomoon-developer:before {
   content: "\e98a";
 }
+.icomoon-developer-head:before {
+  content: "\e98b";
+}
 .icomoon-document-outline:before {
   content: "\e930";
 }
@@ -627,6 +864,12 @@
 .icomoon-photos-outline:before {
   content: "\e957";
 }
+.icomoon-phone-in-hand:before {
+  content: "\e999";
+}
+.icomoon-phone-in-hand-small:before {
+  content: "\e99a";
+}
 .icomoon-pie-outline:before {
   content: "\e958";
 }
@@ -657,6 +900,9 @@
 .icomoon-repeat:before {
   content: "\e961";
 }
+.icomoon-report-add:before {
+  content: "\e9e0";
+}
 .icomoon-reports:before {
   content: "\e962";
 }
@@ -664,51 +910,51 @@
   content: "\e96d";
 }
 .icomoon-reports-flagged-red .path1:before {
-  content: "\e96e";
+  content: "\e963";
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path2:before {
-  content: "\e96f";
+  content: "\e964";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path3:before {
-  content: "\e970";
+  content: "\e965";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path4:before {
-  content: "\e971";
+  content: "\e966";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path5:before {
-  content: "\e972";
+  content: "\e967";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path6:before {
-  content: "\e973";
+  content: "\e968";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path7:before {
-  content: "\e974";
+  content: "\e969";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path8:before {
-  content: "\e975";
+  content: "\e96a";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path9:before {
-  content: "\e976";
+  content: "\e96b";
   margin-left: -1em;
   color: rgb(0, 0, 0);
 }
 .icomoon-reports-flagged-red .path10:before {
-  content: "\e977";
+  content: "\e96c";
   margin-left: -1em;
   color: rgb(153, 0, 0);
 }
@@ -747,6 +993,9 @@
 .icomoon-split:before {
   content: "\e900";
 }
+.icomoon-split-vertical:before {
+  content: "\e99b";
+}
 .icomoon-square-outline:before {
   content: "\e981";
 }
@@ -773,7 +1022,4 @@
 }
 .icomoon-document-add:before {
   content: "\e96e";
-}
-.icomoon-developer-head:before {
-  content: "\e98b";
 }
