--- a/src/assets/fonts/roboto.scss
+++ b/src/assets/fonts/roboto.scss
@@ -49,8 +49,15 @@ $roboto-font-path: "../assets/fonts";
   font-style: normal;
   font-weight: 300;
   src: local("RobotoCondensed-Light"),
-  local("RobotoCondensed-Light"),
   url("#{$roboto-font-path}/RobotoCondensed-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: italic;
+  font-weight: 300;
+  src: local("RobotoCondensed-LightItalic"),
+  url("#{$roboto-font-path}/RobotoCondensed-LightItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -58,8 +65,31 @@ $roboto-font-path: "../assets/fonts";
   font-style: normal;
   font-weight: 400;
   src: local("RobotoCondensed-Regular"),
-  local("RobotoCondensed-Regular"),
   url("#{$roboto-font-path}/RobotoCondensed-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: bold;
+  src: local("RobotoCondensed-Bold"),
+  url("#{$roboto-font-path}/RobotoCondensed-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: italic;
+  font-weight: bold;
+  src: local("RobotoCondensed-BoldItalic"),
+  url("#{$roboto-font-path}/RobotoCondensed-BoldItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: italic;
+  font-weight: normal;
+  src: local("RobotoCondensed-Italic"),
+  url("#{$roboto-font-path}/RobotoCondensed-Italic.ttf") format("truetype");
 }
 
 @font-face {
