Updated report history headers for Travel hours

--- a/src/pages/report-view/report-view.scss
+++ b/src/pages/report-view/report-view.scss
@@ -177,15 +177,15 @@ page-report-view {
       // width: 80%;
     }
   }
-  .shift-date-select-icon {
-    // border: 1px solid black;
-  }
+  // .shift-date-select-icon {
+  //   // border: 1px solid black;
+  // }
   .work-order-delete-button {
     color: black;
   }
-  .bar-button-md ion-icon, .bar-button-md[icon-only] ion-icon {
-    // color: grey !important;
-  }
+  // .bar-button-md ion-icon, .bar-button-md[icon-only] ion-icon {
+  //   // color: grey !important;
+  // }
 
   .red {
     color: red;
@@ -255,9 +255,9 @@ page-report-view {
       font-size: 42px;
       margin-top: 10px;
     }
-    &.cancel {
+    // &.cancel {
 
-    }
+    // }
   }
   svg {
     fill: currentColor;
