--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -8,6 +8,7 @@ page-report-history {
       transform: rotate(22.5deg);
       // zoom: 0.8;
       position: relative;
+      color: rgba(66, 66, 66, 1.0);
       // top: 10px;
     }
     .flagged {
